# img_upscaler

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: Dataset.py  ImageUpscaler.py  setting.py  test_model.py  train.py
src/image_upscaler_cnn/: main.py
src/image_upscaler_cnn/model_file/: upscaler_model_2x.pth
training/: Dataset.py  image_upscaler_cnn.py  settings.py  test_model.py  test_single_image.py  train.py
training/models/: upscaler_model_2x.pth  upscaler_model_2x_w_500_h_500_epoch_0_loss_0.0091.pth  upscaler_model_2x_w_500_h_500_epoch_1_loss_0.0019.pth
